--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Nicole S.</title>
-		<link href="home2.css" type="text/css" rel="stylesheet"/>
+		<link href="index.css" type="text/css" rel="stylesheet"/>
 		<script src="js/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
