--- a/gd2.html
+++ b/gd2.html
@@ -43,7 +43,7 @@
 </div> -->
 
 <div class="header" id="navbar">
-  <a href="home2.html"><img src="image/homeicon.png" width=50 height=50 id="homeicon"></a>
+  <a href="index.html"><img src="image/homeicon.png" width=50 height=50 id="homeicon"></a>
   <div class="nav">
   <!-- <a href="home2.html">Home</a> -->
   <a href="about.html" id="about">About</a>
