--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
 
 
 <div class="header" id="navbar">
-  <a href="home2.html"><img src="image/homeicon.png" width=50 height=50 id="homeicon"></a>
+  <a href="index.html"><img src="image/homeicon.png" width=50 height=50 id="homeicon"></a>
   <div class="nav">
   <!-- <a href="home2.html">Home</a> -->
   <a href="about.html" id="about">About</a>
