--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 
 
 <div class="header" id="navbar">
-  <a href="home2.html"><img src="image/homeicon.png" width=50 height=50 id="homeicon"></a>
+  <a href="index.html"><img src="image/homeicon.png" width=50 height=50 id="homeicon"></a>
   <div class="nav">
   <!-- <a href="home2.html">Home</a> -->
   <a href="about.html" id="about" class="hov">About</a>
